src/index.css
@import url('https://fonts.googleapis.com/css2?family=Pangolin&display=swap');
@import "tailwindcss";

/* html,
body,
#root {
  max-width: 100%;
  overflow-x: hidden;
} */


@layer base {
  body {
    @apply bg-primary text-secondary-4 font-sans;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-image: radial-gradient(circle at 10% 20%, rgba(217, 176, 140, 0.1) 0%, transparent 30%),
                      radial-gradient(circle at 90% 80%, rgba(255, 203, 154, 0.1) 0%, transparent 40%);
  }
}

* {
  scrollbar-width: thin;
}

*::-webkit-scrollbar {
  width: 10px;
  height: 0;
}

*::-webkit-scrollbar-thumb {
  border-radius: 9999px;
}

